# playwhat

./: .gitignore  README.md  pyproject.toml  sample.json
playwhat/: __init__.py  app.py  auth.py
playwhat/modules/: gamepass.py  steam.py
playwhat/templates/: base.html.j2  index.html.j2
playwhat/templates/app/: index.html.j2  searchform.html.j2
