[tool.poetry]
name = "playwhat"
version = "0.1.0"
description = ""
authors = ["0xChloe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
bs4 = "^0.0.1"
python-steam-api = "^1.2.0"
steamsignin = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
